<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JshopActivity!</string>
    <string name="app_name">jshop_android</string>
    <string name="username">用户名称:</string>
    <string name="password">用户密码:</string>
    <string name="confirmpassword">确认密码:</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="newuser">新用户名:</string>
    <string name="email">邮箱地址:</string>
    <string name="submit">确定</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="aboutus">关于</string>
    <string name="service">服务</string>
    <string name="contact">联系</string>
    <string name="searchtextView">请输入您要搜索的关键字</string>
    <string name="boutiquestextview">精品店铺</string>
    <string name="searchgoodstextview">商品搜索</string>
    <string name="usercentertextview">个人中心</string>
    <string name="sharetextview">分享体验</string>
    <string name="text1">随着Windows Phone逐步渗入中国智能手机市场，Windows Phone作为移动操作平台的新锐，自然不会失宠。Windows Phone 7在中国没有流行的原因，很大程度上是因为在中国并没有上市。现在，诺基亚和微软宣布达成紧密战略合作之后，沉寂许久的Windows Phone操作系统再次走入了人们关注的视野，成了移动应用开发者继iOS和Android之外的另一选择。</string>
    <string name="text2">好友曾向我展示了最新的iPhone和iPad版《极品飞车》。游戏的渲染效果令人印象深刻，是款蓄势待发的优秀游戏。但是，游戏的前端是典型的UI设计偏差案例。但界面中有大量的属性数据等内容，它在玩家没有时间做决定时提供了过多的内容。这些内容能够显著改变他们的游戏体验，但却在玩家往往感受不到变化的时候呈现。</string>
    <string name="text3">3月31日，第四届CocoaChina游戏开发者大会暨Cocos2D-X技术研讨会在北京举行。来自全世界的移动互联网精英在此交流经验、相互学习。同时这次我们有幸也采访到了CocoaChina的CEO陈昊芝先生。他将为我们揭秘苹果新榜单的算法秘密，并未我们带来捕鱼达人成功的推广经验，对微软Windows Phone平台的吐槽和对未来3D技术趋势的前瞻。</string>
    <string name="text4">北京时间4月1日消息，谷歌虽然一直以来都在地图产品上提供和完善各种各样的系统接口，但是迄今为止却一直忽略了广受欢迎的NES游戏。然而也就是今天搜索巨头谷歌利用愚人节的机会，“调皮”地推出流行的NES八位地图产品。</string>
    <string name="text5">在NASA和美国国家地理的参与下，这群小鸟摆脱了地球引力，跑到了太空，这就是即将在2012年3月22日公测的《愤怒的小鸟：太空版》。为了让小鸟们成功解救出它们珍贵的“无价之蛋”，美国国家地理为此出版了一本书，来提供完成任务所需的关于行星、卫星、银河系等关于外太空的知识，并将于3月20日开始发售。</string>
    <string name="text6">Google搜索引擎已经赢得全球范围的赞誉，而这一切都要归功于Google开创性的MapReduce。Google搜索引擎算法只是其搜索引擎的一部分，在后台支持Google算法的基础设施才是真正的幕后英雄，其基础设施可快速的索引链接成千上万台普通服务器。MapReduce的成功也直接推动了Hadoop的发展。</string>
	<string name="t1">测试1</string>
	<string name="t2">测试2</string>
	<string name="t3">测试3</string>
	<string name="tableandchangetable">就坐/更改座位</string>
	<string name="eat">点餐/加餐</string>
	<string name="finishorder">结帐/埋单</string>
	<string name="calcuter">计算器</string>
	<string name="callwaiter">呼叫服务员</string>
	<string name="vip">VIP/会员中心</string>
	<string name="tablefloor">F1一楼大厅</string>
	<string name="seattable">在此处就坐</string>
	<string name="changetable">更换座位到这里</string>
	<string name="tableNumber">桌号:</string>
	<string name="roomName">包厢:</string>
	<string name="androidDevicesCount">设备:</string>
	<string name="tablenote">备注:</string>
	<string name="nop">人数:</string>
	<string name="tablestate">状态:</string>
	<string name="floor">楼层:</string>
	<string name="rnop">就餐人数:</string>
	<string name="goodscategoryname">菜单分类</string>
	<string name="goodslistname">菜品列表</string>
	<string name="addtoelectcart">加入餐车</string>
	<string name="myelectrocart">继续点菜</string>
	<string name="totalprice">总价</string>
	<string name="diandan">点单</string>
	<string name="maidan">买单</string>
	<string name="payway">支付方式：</string>
	<string name="cash1">现金</string>
	<string name="creditcard2">刷卡</string>
	<string name="changeview">切换模式</string>
	<string name="recommend">已点菜单</string>
	<string name="classify">菜单分类</string>
</resources>