<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="@drawable/index_menu_background">
    <TableLayout android:layout_width="fill_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:collapseColumns="2" android:stretchColumns="1">
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:layout_width="wrap_content" android:id="@+id/username" android:layout_height="wrap_content" android:text="@string/username"></TextView>
            <EditText android:id="@+id/loginusername" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <requestFocus></requestFocus>
            </EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:id="@+id/userpassword" android:layout_height="wrap_content" android:text="@string/password"></TextView>
            <EditText android:id="@+id/loginpassword" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:text="@string/register" android:id="@+id/register" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
            <Button android:text="@string/login" android:id="@+id/login" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
        </TableRow>
      
    </TableLayout>
 	
</LinearLayout>
