<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="2dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/indextopimg" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/sit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/findsitshover" />

                <ImageButton
                    android:id="@+id/ordingfoods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/ordingfooddisable" />

                <ImageButton
                    android:id="@+id/checkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/checkoutdisable" />

            </LinearLayout>
        </TableRow>
		<TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >

			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >

				<TextView
				    android:id="@+id/textView1"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:layout_marginLeft="15dp"
				    android:layout_marginRight="40dp"
				    android:text="@string/tableandchangetable"
				    android:textSize="10dp" />

				<TextView
				    android:id="@+id/textView2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:layout_marginLeft="5dp"
				    android:layout_marginRight="40dp"
				    android:text="@string/eat"
				    android:textSize="10dp" />

				<TextView
				    android:id="@+id/textView3"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:layout_marginLeft="10dp"
				    android:text="@string/finishorder"
				    android:textSize="10dp" />

			</LinearLayout>
		
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/calculator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/calculatordisable" />

                <ImageButton
                    android:id="@+id/callservice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/callservicedisable" />

                <ImageButton
                    android:id="@+id/vipcenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/vipcentdisable" />

            </LinearLayout>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/calcuter"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/callwaiter"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/vip"
                    android:textSize="10dp" />

            </LinearLayout>
           
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/indexbottomimg" />
        </TableRow>
    </TableLayout>

</LinearLayout>