<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="true">

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/floorleftbutton" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/floortitlebg"
                    android:text="@string/goodslistname"
                    android:textColor="#FFFFFF"
                    android:tileMode="repeat" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="#00000000"
                    android:src="@drawable/floorrightbutton" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginTop="-2dp"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="2dp"
                android:baselineAligned="true" >

                <Button
                    android:id="@+id/goodscategory"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/classify"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/selectedorder"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/recommend"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/changeview"
                    android:textColor="#000000" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:weightSum="4" >

        <ListView
            android:id="@+id/listViewgoods"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#000000" >
        </ListView>
    </LinearLayout>

</LinearLayout>
